# qqbot

./: .env  .gitignore  README.md  bot.py  environment.yml  pyproject.toml  requirements.txt
qq_bot/plugins/: novelai.py
qq_bot/plugins/weather/: __init__.py
src/plugins/: novelai.py
src/plugins/help/: __init__.py
src/plugins/weather/: __init__.py  config.py
src/tests/: conftest.py  test_weather.py  test_weather_onebot.py
