[project]
name = "qqbot"
version = "0.1.0"
description = "qqbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "Console", module_name = "nonebot.adapters.console"}
]
plugins = ["nonebot_plugin_userinfo"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]
